--- a/src/components/Directs/Chat/css.css
+++ b/src/components/Directs/Chat/css.css
@@ -97,6 +97,7 @@
     border-bottom: 1px solid #dbdbdb;
     background-color: #ededed;
 }
+
 .header-chat{
     display: flex;
     align-items: center;
@@ -190,12 +191,13 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
     -o-transform: skew(20deg);
     transform: skew(20deg);
     position: absolute;
-    top:-1px;
+    top:0px;
     left:-2px;
     right: unset;
 }
 
 .dark .chat-message::after{
+    top: -1px;
     background-color: #525151;
 }
 
@@ -228,7 +230,8 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 }
 .chat-message.own::after{
     left: unset;
-    right: -3px;
+    top: 0;
+    right: -2px;
     -webkit-transform: skew(-20deg);
     -moz-transform: skew(-20deg);
     -ms-transform: skew(-20deg);
